--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,7 +1,7 @@
 @import "footer.css";
 
 :root {
-    --header-h: 88px;
+    --header-h: 150px;
 }
 
 * {
@@ -12,26 +12,27 @@
 
 body {
     background-size: cover;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), url('../images/BG_synthwave_landscape_cc0.png') fixed center center;
+    background: #3b3333;
+    /*background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), url('../images/BG_synthwave_landscape_cc0.png') fixed center center;*/
     color: #EEE;
     font-family: 'Roboto', sans-serif;
-    padding: 10px;
+    padding-top: 150px;
 
     a {
         text-decoration: none;
     }
 }
 
-nav ul {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    gap: 2em;
+.navbar {
+    --bs-navbar-padding-y: 1.2rem;
 }
 
-nav li a {
-    text-decoration: none;
-    color: inherit;
+.nav-admin {
+    color: #ff0000 !important; /* couleur normale */
+}
+
+.nav-admin:hover {
+    color: #ffffff !important; /* couleur au survol */
 }
 
 main {
