--- a/templates/part/_header.html.twig
+++ b/templates/part/_header.html.twig
@@ -1,15 +1,14 @@
 <header>
 
-    <nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{ path('app_accueil') }}">Sortir</a>
+    <nav class="navbar navbar-expand-lg bg-light fixed-top" data-bs-theme="light">
+        <div class="container-fluid px-0">
+            <a class="navbar-brand px-4" href="{{ path('app_accueil') }}">Sortir</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
                     aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav me-auto">
-
+                <ul class="navbar-nav me-auto gap-4">
                     <li class="nav-item"><a class="nav-link" href="{{ path('app_accueil') }}">Accueil</a></li>
 
                     {% if is_granted('IS_AUTHENTICATED') %}
@@ -19,30 +18,52 @@
                                     Profil
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a href="{{ path('app_sortie_creer') }}" class="btn btn-secondary my-2 my-sm-0">Créer une sortie</a>
+                            </li>
                         {% endif %}
 
-                        <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a></li>
 
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
                     {% endif %}
 
+                    {% if is_granted('ROLE_ADMIN') %}
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                               aria-haspopup="true" aria-expanded="false">Administrer</a>
-                            <div class="dropdown-menu">
-                                {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle nav-admin" data-bs-toggle="dropdown" href="#" role="button"
+                           aria-haspopup="true" aria-expanded="false">Administrer</a>
+                        <div class="dropdown-menu">
+
                                 <a class="dropdown-item" href="{{ path('app_admin_ville') }}">Villes</a>
                                 <a class="dropdown-item" href="{{ path('app_admin_site') }}">Sites</a>
                                 <a class="dropdown-item" href="{{ path('app_admin_inscription') }}">Inscriptions</a>
-                                {% endif %}
-                            </div>
-                        </li>
 
+                        </div>
+
+                    </li>
+                    {% endif %}
                 </ul>
 
+                <div class="d-flex px-4">
+                    <ul class="navbar-nav ms-auto align-items-center gap-4">
+                        {% if app.user != null %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_profil_detail', { id: app.user.id }) }}">
+                                    Bienvenue {{ app.user.pseudo }}
+                                    {% if is_granted('ROLE_ADMIN') %}
+                                    [Admin]
+                                    {% endif %}
+                                    - {{ "now" | date("d/m/Y") }}
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+                            </li>
+
+                        {% endif %}
+                    </ul>
+                </div>
             </div>
-        </div>
     </nav>
 </header>
