--- a/templates/admin/ville.html.twig
+++ b/templates/admin/ville.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Gérer les Villes{% endblock %}
+{% block title %}{{ parent()}} | Admin - Gérer les Villes{% endblock %}
 
 {% block main %}
     <h2>Gérer les villes</h2>
