--- a/templates/part/_header.html.twig
+++ b/templates/part/_header.html.twig
@@ -32,7 +32,7 @@
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                                aria-haspopup="true" aria-expanded="false">Administrer</a>
                             <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="{{ path('app_admin_utilisateurs') }}">Utilisateurs</a>
+                                    <a class="dropdown-item" href="{{ path('app_admin_utilisateur') }}">Utilisateurs</a>
                                     <a class="dropdown-item" href="{{ path('app_admin_ville') }}">Villes</a>
                                     <a class="dropdown-item" href="{{ path('app_admin_site') }}">Sites</a>
                                     <a class="dropdown-item" href="{{ path('app_admin_inscription') }}">Inscriptions</a>
