--- a/templates/profil/edit.html.twig
+++ b/templates/profil/edit.html.twig
@@ -7,9 +7,13 @@
 {% block main %}
 
     <div class="row justify-content-center">
-        <div class="card text-white bg-secondary mb-3" style="max-width: 30rem;">
-            <div class="card-body">
-                <h4 class="card-title">Modifier mon profil</h4>
+        <div class="card text-white bg-secondary mb-3" style="max-width: 32rem;">
+            <div class="card-header d-flex align-items-center justify-content-center" style="min-height: 60px;">
+                <h2 class="card-title mb-0">
+                    Modifier mon profil
+                </h2>
+            </div>
+            <div class="card-body mt-4">
 
                 {{ form_errors(profil_form) }}
                 {{ form_start(profil_form) }}
