--- a/templates/profil/update_password.html.twig
+++ b/templates/profil/update_password.html.twig
@@ -3,10 +3,15 @@
 {% block title %}{{ parent() }} | Modifier mon mot de passe{% endblock %}
 
 {% block main %}
-    <h2>Modifier mon mot de passe</h2>
 
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-3">
+<div class="row justify-content-center">
+    <div class="card text-white bg-secondary mb-3" style="max-width: 32rem;">
+        <div class="card-header d-flex align-items-center justify-content-center" style="min-height: 60px;">
+            <h2 class="card-title mb-0">
+                Modifier mon mot de passe
+            </h2>
+        </div>
+        <div class="card-body mt-4">
             {{ form_errors(update_password_form) }}
             {{ form_start(update_password_form) }}
             {{ form_widget(update_password_form) }}
