--- a/templates/admin/site.html.twig
+++ b/templates/admin/site.html.twig
@@ -3,41 +3,127 @@
 {% block title %}Gérer les Sites{% endblock %}
 
 {% block main %}
-    <h2>Gérer les Sites</h2>
+
+    <div class="row justify-content-center">
+        <div class="card text-white bg-secondary mb-3" style="width: 30%;">
+            <div class="card-body">
+
+                {{ form_errors(search_form) }}
+                {{ form_start(search_form) }}
+                {{ form_end(search_form) }}
+
+            </div>
+        </div>
+    </div>
 
 
-    <section>
-        {{ form_errors(search_form) }}
-        {{ form_start(search_form) }}
-        {{ form_end(search_form) }}
-    </section>
-    <section>
-        <table class="table table-dark table-striped">
-            <thead>
-            <tr>
-                <th scope="col">Site</th>
-                <th scope="col">Actions</th>
-            </tr>
-            </thead>
-            {{ form_errors(site_form) }}
-            {% for site in sites %}
+    <section class="mt-4">
+
+        <div class="table-responsive w-50 mx-auto">
+            <table class="table w-100">
+
+                <thead>
                 <tr>
-                    <td>CAMPUS {{ site.nom | upper }}</td>
-                    <td><a href="{{ path('app_admin_site_update', {id: site.id, token: csrf_token('site_update' ~ site.id)}) }}">Modifier</a> - <a
-                            href="{{ path('app_admin_site_delete', { id: site.id, token: csrf_token('site_delete' ~ site.id) }) }}"
-                            onclick="return confirm('Etes vous sur de vouloir supprimer ce site?')">Supprimer</a></td>
+                    <th scope="col">Site</th>
+                    <th scope="col" style="width: 20%;">Actions</th>
                 </tr>
-            {% endfor %}
-            {{ form_start(site_form) }}
-            <tr>
-                <td>
-                    {{ form_row(site_form.nom) }}
-                </td>
-                <td>
-                    {{ form_row(site_form.submit, { 'label': 'Ajouter' }) }}
-                </td>
-            </tr>
-            {{ form_end(site_form) }}
-        </table>
+                </thead>
+
+{#                <tbody>#}
+
+{#                {% for site in sites %}#}
+{#                    <tr class="table-primary">#}
+{#                        <td>CAMPUS {{ site.nom|upper }}</td>#}
+
+{#                        <td  style="width: 20%;">#}
+{#                            <a class="btn btn-sm btn-info"#}
+{#                               href="{{ path('app_admin_site_update', { id: site.id, token: csrf_token('site_update' ~ site.id) }) }}">#}
+{#                                Modifier#}
+{#                            </a>#}
+
+{#                            <a class="btn btn-sm btn-danger"#}
+{#                               href="{{ path('app_admin_site_delete', { id: site.id, token: csrf_token('site_delete' ~ site.id) }) }}"#}
+{#                               onclick="return confirm('Êtes-vous sûr·e de vouloir supprimer ce site ?')">#}
+{#                                Supprimer#}
+{#                            </a>#}
+{#                        </td>#}
+{#                    </tr>#}
+{#                {% endfor %}#}
+
+{#                #}{# ligne d’ajout #}
+{#                {{ form_start(site_form) }}#}
+{#                <tr class="table-primary">#}
+{#                    <td>#}
+{#                        {{ form_row(site_form.nom) }}#}
+{#                    </td>#}
+
+{#                    <td style="width: 20%;">#}
+{#                        {{ form_widget(site_form.submit, {#}
+{#                            label: 'Ajouter',#}
+{#                            attr: { class: 'btn btn-success' }#}
+{#                        }) }}#}
+{#                    </td>#}
+{#                </tr>#}
+{#                {{ form_end(site_form) }}#}
+
+{#                </tbody>#}
+
+
+
+                <tbody>
+                {% for site in sites %}
+                    <tr class="table-primary">
+
+                        {% if editingId is defined and editingId == site.id %}
+                            {# MODE ÉDITION (ligne cliquée) #}
+
+                            {{ form_start(site_edit_form) }}
+
+                            <td>
+                                {{ form_row(site_edit_form.nom) }}
+                            </td>
+
+                            <td class="text-end" style="width: 20%;">
+                                {{ form_widget(site_edit_form.submit, {
+                                    label: 'Enregistrer',
+                                    attr: { class: 'btn btn-success btn-sm' }
+                                }) }}
+
+                                <a class="btn btn-sm btn-secondary"
+                                   href="{{ path('app_admin_site') }}">
+                                    Annuler
+                                </a>
+                            </td>
+
+                            {{ form_end(site_edit_form) }}
+
+                        {% else %}
+                            {# MODE AFFICHAGE #}
+                            <td>CAMPUS {{ site.nom|upper }}</td>
+
+                            <td class="text-end" style="width: 20%;">
+                                <a class="btn btn-sm btn-info"
+                                   href="{{ path('app_admin_site_update', { id: site.id }) }}">
+                                    Modifier
+                                </a>
+
+                                <a class="btn btn-sm btn-danger"
+                                   href="{{ path('app_admin_site_delete', { id: site.id, token: csrf_token('site_delete' ~ site.id) }) }}"
+                                   onclick="return confirm('Êtes-vous sûr·e de vouloir supprimer ce site ?')">
+                                    Supprimer
+                                </a>
+                            </td>
+                        {% endif %}
+
+                    </tr>
+                {% endfor %}
+                </tbody>
+
+
+
+
+            </table>
+        </div>
+
     </section>
 {% endblock %}
