--- a/templates/profil/profil.html.twig
+++ b/templates/profil/profil.html.twig
@@ -30,6 +30,7 @@
                 <p><strong>Pseudo :</strong> {{ participant.pseudo }}</p>
                 <p><strong>Nom :</strong> {{ participant.nom }}</p>
                 <p><strong>Prénom :</strong> {{ participant.prenom }}</p>
+                <p><strong>Campus : </strong> {{ participant.site.nom }} </p>
 
                 {% if app.user and app.user.id == participant.id %}
                     <p><strong>Adresse mail :</strong> {{ participant.email }}</p>
